# virtual_rainforest_snakemake_template

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  Snakefile  pyproject.toml  snakemake_helper.py
.github/workflows/: ci.yml
dummy_data/: dummy_total_config.toml  vr_run.toml
pbs-icl/: pbs-submit.py
snakemake_helper/: __init__.py  parameter_grid.py  ve_experiment.py  vr_experiment.py
tests/: test_ve_experiment.py  test_vr_experiment.py
workflow-profile/: config.yaml
