[tool.poetry]
name = "virtual-rainforest-snakemake-template"
version = "0.1.0"
description = "A template repository for running Virtual Rainforest analyses using Snakemake."
authors = ["Alex Dewar <a.dewar@imperial.ac.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
snakemake = "^9.0.1"
pre-commit = "^3.4.0"
virtual-rainforest = { path = "virtual_rainforest" }
mypy = "^1.5.1"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pytest-mypy = "^0.10.3"
numpy = "^1.26.0"
ruff = "^0.11.1"

[tool.mypy]
ignore_missing_imports = true
exclude = [".venv/"]

[tool.ruff]
target-version = "py311"
lint.select = [
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff
]
lint.ignore = ["D203", "D213"]
lint.pydocstyle.convention = "google"

exclude = ["virtual_rainforest"]

[tool.pytest.ini_options]
addopts = "-v --mypy -p no:warnings --cov=snakemake_helper --cov-report=html --doctest-modules snakemake_helper tests"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
